# dendrite

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
docs/: HERMES_PROVIDER.md
specs/hermes-bulk-migration/: design.md  requirements.md
specs/hermes-provider-capture/: design.md  milestones.md  requirements.md
specs/spool-pipeline-refactor/: design.md  requirements.html  requirements.md
src/dendrite/: __init__.py  agy_headless_capture.py  capture.py  cli.py  ingress_transport.py  minimizer.py  provider_contracts.py  redaction.py  source_catalog.py  spool.py  transcript_capture.py  transcript_drain.py  transcript_ingest.py  transcript_migrate.py  transcript_source.py
src/dendrite/providers/: __init__.py  claude.py  codex.py  contracts.py  gemini.py  hermes.py  openclaw.py
src/dendrite/rag_ingress/: __init__.py  outbox_client.py  rag_ready_document.py
tests/: test_agy_headless_capture.py  test_antigravity_capture_payload.py  test_client_boundary.py  test_event_minimizer.py  test_hermes_capture_payload.py  test_provider_contracts.py  test_rag_ingress_outbox_client.py  test_repo_instructions.py  test_smoke.py  test_source_catalog.py  test_spool.py  test_transcript_drain.py  test_transcript_error_classification.py  test_transcript_ingest_queue_client.py  test_transcript_migrate.py
