[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dendrite"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
dendrite = "dendrite.cli:main"
agy-headless-capture = "dendrite.agy_headless_capture:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = ["-p", "no:cacheprovider"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
